infrastructure/manifests/observability/linkerd-viz-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: proxy-admin
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: linkerd-viz-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-tap
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: proxy-tap
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: linkerd-viz-identity
